2009-10-01  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Reinstate numeric checking for the FFT code.
	
	* benchmarks/fft/fft_test1.c,	
	* benchmarks/fft/fft_test2.c: Do not ignore numeric output anymore
	since the diverging results on MT-Alpha were due to a simulation
	bug that is now fixed.
	
2009-09-30  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Avoid `-n' in test code.
	
	* demo/mandel.c,
	* benchmarks/fft/fft_test1.c,	
	* benchmarks/fft/fft_test2.c: Do not use `-n' in SLT_RUN any more.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `fft' benchmark program.
	
	* benchmarks/fft/fft_bench.c: Print cycle counts at each outer
	iteration.

2009-09-29  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `mandel' demo.
	
	* demo/mandel.c: Update to use the new API definition from
	note [sl7].

2009-09-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Update `checkers' demo.
	
	* demo/checkers.c: Demonstrate `gfx_fb_set' since `gfx_putpixel'
	is already demoed in the `mandel' demo

2009-09-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Enhance the `mandel' demo.
	
	* demo/mandel.c: Refactor code to clarify steps. Change the color
	scheme to make the output more printer-friendly.

2009-09-25  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the `mandel' demo with use of the SEP protocol.
	
	* demo/mandel.c: Update to use place management.

2009-09-21  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Add some demos with graphics.

	`checkers' - create a 8x8 checker board.	
	`mandel' - approximate the Mandelbrot set.

	* demo/checkers.c,
	* demo/mandel.c: New.

	* demo/Makefile.am: Update accordingly.

2009-08-28  Raphael 'kena' Poss  <r.c.poss@uva.nl>

	Extend the SHA benchmark code.
	
	* benchmarks/sha/sha1.c: Remove block size in call to
	`sha_main_outer'.
	
	* benchmarks/sha/sha1_alt.c: New optimized version, thanks to
	Mike Lankamp.

	* benchmarks/sha/testsha.sh: New.
	
	* benchmarks/sha/Makefile.am: Update accordingly.
	